--- a/product/templates/bl/bl.html
+++ b/product/templates/bl/bl.html
@@ -3,12 +3,26 @@
 {% block title %} body{% endblock %}
 {% block content %} 
 {% load humanize %}
+<div class="body">
 <div class="sidebar-container">
     <div>MILK</div>
     <div>MILK</div>
     <div>MILK</div>
   </div>
 <div class="shop">
+
+
+{% if Products %}
+    <h2>Kết quả tìm kiếm cho: "{{ query }}"</h2>
+    {% for product in Products %}
+        <div>
+            <a href="/blog/{{ product.id }}">{{ product.title }}</a>
+            <p>Giá: {{ product.price|intcomma }} đ</p>
+        </div>
+    {% endfor %}
+{% else %}
+    <p>Không tìm thấy sản phẩm nào.</p>
+{% endif %}
 {% for product in Product %}
 <div class="product-container">
 {% if product.image %}
@@ -42,5 +56,6 @@
 {% if page_obj.has_next %}
 <a href="{{request.path}}?page={{page_obj.next_page_number}}">Tiep theo</a>
 {% endif %}
+</div>
 </div>
 {% endblock %}
