--- a/product/templates/bl/post.html
+++ b/product/templates/bl/post.html
@@ -8,10 +8,15 @@
   <div><img class="product-img-f" src="{{product.image.url}}"></div>
   <div class="product-name">{{product.body|safe|linebreaks}}
     <p>{{product.price|intcomma}} Đ</p>
-    So luong
-    <input type="number" value="0" min="1" class="quanity">
-    <button type="submit" class="submit">Them vao gio hang </button>
-    <button>mua ngay</button>
+   <h2>{{ product.name }}</h2>
+ <form action="{% url 'add_to_cart' product.id %}" method="POST">
+    {% csrf_token %}
+    <label for="quantity">Số lượng:</label>
+    <input type="number" id="quantity" name="quantity" value="1" min="1" >
+    <button type="submit" >Thêm vào giỏ hàng</button>
+</form>
+    <a href="{% url 'buy' product.id %}"><button>Mua ngay</button></a>
+
   </div>
 </div>
   <div style="font-size:small;">
@@ -23,12 +28,12 @@
 {% endfor %}
 
 {% if user.username %}
-  <form action="{% url 'product' product.id %}" method='POST'>
+  <form action="{% url 'product' product.id %}"    method='POST'>
   {% csrf_token %}
   <div><label>Binh luan:</label></div>
   {{form.body}}
   
-  <input type="submit" value="Binh luan">
+  <input type="submit"  value="Binh luan">
   </form>
 </div>
 {% endif %}
