--- a/home/static/css/base.css
+++ b/home/static/css/base.css
@@ -1,8 +1,11 @@
 body{
   font-family: Arial, Helvetica, sans-serif;
+
+  display: flex;
+  flex-direction: column
 }
 .header-container{
-
+  
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -11,16 +14,13 @@ body{
   z-index: 1;
 }
 .access-container{
-
- padding: 10px;
- padding-top: 12px;
+  padding: 5px;
  display: flex;
  flex-direction: row;
  justify-content: space-between
 }
 .searchbar-container{
   border: 1px solid black;
-  padding: 10px;
   padding-left: 20px;
   padding-right: 20px   ;
   display: flex;
@@ -41,23 +41,23 @@ body{
 .body{
   display: flex;
   flex-direction: row;
-
+  padding-top: 40px;
+  
 }
 .sidebar-container{
   display: flex;
   flex-direction: column;
   padding: 10px;
   border: 1px solid black;
-  flex:1;
+  flex:1.5;
   height: fit-content 
 }
 .shop{
   display: grid;
-  grid-template-columns: 250px 250px 250px 250px 250px;
+  grid-template-columns: 230px 230px 230px 230px 230px;
   border: solid 5px black;
-  column-gap: 20px; 
-  row-gap: 50px;
-  flex: 9;
+  column-gap: 20px;  row-gap: 10px;
+  flex: 8.5;
   
 }
 .product-container{ 
@@ -67,7 +67,8 @@ body{
  justify-content:start;
  align-items: center;
  border: 1px solid black;
- padding-top:10px ;
+ font-size:15px;
+
 }
 
 .product-img{
@@ -84,6 +85,7 @@ body{
   align-items: center;
 }
 .footer-container{
+
   display: grid;
   grid-template-columns: 500px 500px;
   justify-content: center;
@@ -112,9 +114,11 @@ body{
   display: flex;
   flex-direction: row  ;
   justify-content: space-between;
-  background-color: rgb(137, 186, 250);
+  
+  margin-top: 100px;
 }
 .item-container{
+  background-color: rgb(137, 186, 250);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -130,7 +134,7 @@ body{
  display: flex;
  flex-direction: column;
  border: 1px solid grey;
- 
+ justify-content: center;
  flex: 0.5;
  align-items: center;
 }
