--- a/home/templates/pages/base.html
+++ b/home/templates/pages/base.html
@@ -20,7 +20,7 @@
           <button type="submit">Logout</button>
         </form>
         {% else %}
-          <div><a href="{% url 'register' %}">Dang ki</a><a href="{% url 'login' %}">Dang nhap</a></div>   
+          <div><a href="{% url 'register' %}"><button>Dang ki</button></a> <a href="{% url 'login' %}"><button>Dang nhap</button></a></div>   
         {% endif %}   
       </div>         
     
