--- a/home/templates/pages/product.html
+++ b/home/templates/pages/product.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body style="background-color: black;">
-  <a href="{% url 'bl' %}">PROJECT</a>
+<body style="background-color: white; display:flex;justify-content: center;align-items: center; height: 100vh;">
+  <a style="font-size: 50px;" href="{% url 'bl' %}">XIN MOI QUY KHACH MUA HANG </a>
 </body>
 </html>
